namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: safra-ia-ops
  labels:
    app.kubernetes.io/name: safra-ia-ops
    app.kubernetes.io/part-of: safra-ia-operations
